Move mouse events to actual player canvas element
This should help with any issues regarding mouse offset

--- a/static/css/room/player.css
+++ b/static/css/room/player.css
@@ -85,9 +85,11 @@ p.player-dev {
 
 canvas.player-stream {
     position: fixed;
+
+    outline: none;
     
-    left: 50%;
     top: 50%;
+    left: 50%;
     max-width: 100%;
     max-height: 100%;
     
