--- a/static/css/cryb-invite.css
+++ b/static/css/cryb-invite.css
@@ -13,11 +13,11 @@ div.invite-details {
 }
 
 img.invite-member-icon {
-    border-radius: 999px;
     height: 35px;
 
-    margin: auto;
-    /* margin-left: 0.75em */
+    border-radius: 999px;
+
+    margin: auto
 }
 
 div.invite-member-icons {
