--- a/static/css/cryb-master.css
+++ b/static/css/cryb-master.css
@@ -101,11 +101,10 @@ div.header div.gradient {
 }
 
 div.header div.gradient:hover {
-    opacity: 1;
+    opacity: 1
 }
 
 div.header div.gradient:hover + img.logo {
-    /* opacity: 0 */
     visibility: hidden
 }
 
@@ -392,13 +391,8 @@ div.header-menu div.menu-section:not(:first-child):first-of-type {
 }
 
 div.header-menu div.menu-section:not(:last-child) {
-/* div.header-menu div.menu-section { */
     border-bottom: 1.5px rgba(112, 128, 144, 0.5) solid
 }
-
-/* div.header-menu div.menu-section:last-child {
-    border-bottom: none
-} */
 
 ::selection {
     background: #e4e4e4
