--- a/static/css/cryb-components.css
+++ b/static/css/cryb-components.css
@@ -1,41 +1,3 @@
-/* .button {
-    border: 0;
-    padding: 0;
-    outline: 0;
-    margin: 0;
-    
-    color: white;
-    background-color: black;
-    border: 1px solid black;
-
-    cursor: pointer;
-    
-    font-size: 17.5px;
-    padding: 10px;
-    padding-left: 12.5px;
-    padding-right: 12.5px;
-    border-radius: 5px;
-
-    transition: all 0.2s
-}
-
-.button.discord {
-    background-color: #7289DA;
-    border-color: #7289DA;
-
-    color: white;
-}
-
-.button:hover {
-    color: black;
-    background-color: white;
-}
-
-.button.discord:hover {
-    background-color: white;
-    color: #7289DA;
-} */
-
 .loading {
     background: linear-gradient(225deg,red,#d200ff,#0063ff,#00ffc1,#0bff66,#16ff00,#f0ff00,red) !important;
     background-size: 1600% 1600% !important;
@@ -95,10 +57,8 @@ button.button:not(.disabled):active {
 
 button.button.disabled {
     cursor: not-allowed;
-    /* pointer-events: none; */
 
-    opacity: 0.55;
-
+    opacity: 0.55
 }
 
 div.box {
