Add support for no landing video
Adding BRAND_LANDING_VIDEO_ID= to your .env file should now remove the landing video and resize other elements so everything looks ok

--- a/static/css/cryb-landing.css
+++ b/static/css/cryb-landing.css
@@ -3,6 +3,11 @@ div.center {
     max-width: 100%
 }
 
+div.center:not(.has-landing-video) {
+    max-width: 60%;
+    width: fit-content
+}
+
 div.landing div.left, div.landing div.right {
     position: absolute;
 
