Use same style across different components

--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -9,7 +9,7 @@ a.button-wrapper div.button {
     padding: 10px;
 
     background-color: black;
-    box-shadow: 0 0 0 1px black;
+    box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25);
 
     font-weight: 600;
     border-radius: 5px;
@@ -18,11 +18,6 @@ a.button-wrapper div.button {
     display: flex;
 
     transition: all 0.2s ease-in-out
-}
-
-div.content.is-dark a.button-wrapper div.button {
-    background-color: black;
-    box-shadow: 0 0 0 1px rgba(112, 128, 144, .25)
 }
 
 a.button-wrapper div.button.disabled {
@@ -55,7 +50,13 @@ div.button p.button-content {
 }
 
 a.button-wrapper div.button:not(.disabled):not(.loading):hover {
-    background-color: white
+    background-color: #f7f7f7;
+    box-shadow: 0px 4px 10px #00000017 !important
+}
+
+a.button-wrapper div.button:not(.disabled):not(.loading):active {
+    background-color: #ececec;
+    box-shadow: 0px 6px 15px #00000017 !important
 }
 
 div.button:not(.discord):not(.disabled):not(.loading):hover p.button-content {
