--- a/static/css/components.css
+++ b/static/css/components.css
@@ -62,16 +62,19 @@ button.button.disabled {
 }
 
 div.box {
-    box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25);
     border-radius: 10px;
+    background-color: white;
+    box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25);
 
     transition: all 0.1s ease-in-out
 }
 
 div.box:hover {
-    box-shadow: 0px 4px 10px #00000017 !important;
+    /* background-color: #fffcfc; */
+    box-shadow: 0px 4px 10px #00000017 !important
 }
 
 div.box:active {
-    box-shadow: 0px 6px 15px #00000017 !important;
+    /* background-color: #f9f8f8; */
+    box-shadow: 0px 6px 15px #00000017 !important
 }
