--- a/static/css/invite.css
+++ b/static/css/invite.css
@@ -15,7 +15,7 @@ div.invite-details {
 img.invite-member-icon {
     height: 35px;
 
-    border-radius: 999px;
+    border-radius: 50%;
 
     margin: auto
 }
