--- a/static/css/room/user-icon.css
+++ b/static/css/room/user-icon.css
@@ -12,7 +12,7 @@ div.user-icon div.user-name-wrapper {
 
     font-weight: bold;
     text-align: center;
-    border-radius: 999px;
+    border-radius: 50%;
 
     transition: all 0.2s;
 }
