--- a/static/css/room/invite-hint.css
+++ b/static/css/room/invite-hint.css
@@ -22,3 +22,12 @@ div.invite-hint a.invite-link {
 div.invite-hint a.invite-link:hover {
     opacity: 1
 }
+
+/* Mobile adaptation */
+@media only screen and (max-width: 768px),(orientation: portrait) {
+
+    div.invite-hint {
+        display:none; /* Temporary fix, needs better solution */
+    }
+
+}
