--- a/static/css/room/chat.css
+++ b/static/css/room/chat.css
@@ -140,3 +140,24 @@ p.chat-typing-bar {
 div.content div.watch div.player-footer, div.content div.watch div.chat {
     background: black;
 }
+
+
+/* Mobile adaptation */
+
+@media only screen and (max-width: 768px) and (orientation: portrait) {
+
+    div.content div.watch div.chat {
+        left:0;
+        width:100%;
+        top:50%;
+    }
+
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+
+    div.content div.watch div.chat {
+        display:none
+    }
+
+}
