--- a/static/css/room/footer.css
+++ b/static/css/room/footer.css
@@ -124,3 +124,42 @@ div.user-control-indicator:hover:not(.non-interactable) img.user-control-icon.ha
     opacity: 0;
     height: 0;
 }
+
+/* Mobile adaptation - CHAT */
+
+@media only screen and (max-width: 768px) and (orientation: portrait) {
+
+    div.content div.watch div.player-footer {
+        right: 0;
+        bottom: 50%;
+
+        width: 100%;
+        height: 10%;
+    }
+        
+    div.user-icons div.user-icon{
+        height:7vh;
+        width:7vh;
+    }
+
+    div.player-footer div.user-icons {
+        padding: 1vh;
+    }
+
+    div.user-icon div.has-control {
+        box-shadow: 0px 0px 0px 3px white;
+    }
+
+    div.user-icon div.user-control-indicator {
+        display:none;
+    }
+
+}
+
+@media only screen and (max-width: 768px) and (orientation: landscape) {
+
+    div.content div.watch div.player-footer {
+        display:none;
+    }
+
+}
