--- a/static/css/room/user-icon.css
+++ b/static/css/room/user-icon.css
@@ -38,3 +38,12 @@ div.chat-bar-wrapper input.disabled {
 div.watch {
     overflow: none
 }
+
+/* Mobile adaptation */
+@media only screen and (max-width: 768px) and (orientation: portrait) {
+
+    div.user-icon div.user-name-wrapper {
+        display:none;
+    }
+
+}
