--- a/static/css/room/chat.css
+++ b/static/css/room/chat.css
@@ -149,7 +149,12 @@ div.content div.watch div.player-footer, div.content div.watch div.chat {
     div.content div.watch div.chat {
         left:0;
         width:100%;
-        top:50%;
+
+        position: relative;
+        
+        min-height: calc(55vh - 65px);
+        max-height: calc((91vh - 65px) - 56.25vw);
+        height: calc((36vh - 56.25vw) * 100);
     }
 
 }
@@ -157,7 +162,7 @@ div.content div.watch div.player-footer, div.content div.watch div.chat {
 @media only screen and (max-width: 768px) and (orientation: landscape) {
 
     div.content div.watch div.chat {
-        display:none
+        display:none;
     }
 
 }
