--- a/static/css/room/footer.css
+++ b/static/css/room/footer.css
@@ -125,16 +125,19 @@ div.user-control-indicator:hover:not(.non-interactable) img.user-control-icon.ha
     height: 0;
 }
 
-/* Mobile adaptation - CHAT */
+/* Mobile UI adaptation */
 
 @media only screen and (max-width: 768px) and (orientation: portrait) {
 
     div.content div.watch div.player-footer {
-        right: 0;
-        bottom: 50%;
+        left:0px;
+        right: 0px;
+        top: 0px;
 
         width: 100%;
-        height: 10%;
+        height: 9vh;
+
+        position:relative;
     }
         
     div.user-icons div.user-icon{
@@ -146,7 +149,7 @@ div.user-control-indicator:hover:not(.non-interactable) img.user-control-icon.ha
         padding: 1vh;
     }
 
-    div.user-icon div.has-control {
+    div.user-icons div.has-control {
         box-shadow: 0px 0px 0px 3px white;
     }
 
