--- a/static/css/room/player.css
+++ b/static/css/room/player.css
@@ -163,13 +163,18 @@ div.player-tooltip a.player-tooltip-action {
     color: black
 }
 
-/* Mobile adaptation */
+/* Mobile UI adaptation */
 
-@media only screen and (max-width: 768px),(orientation: portrait) {
+@media only screen and (max-width: 768px) and (orientation: portrait) {
 
     div.content div.watch div.player-wrapper {
         width: 100%;
         bottom: 60%;
+
+        height: 56.25vw;
+        max-height: 36vh;
+
+        position:relative;
     }
     
 }
@@ -177,8 +182,17 @@ div.player-tooltip a.player-tooltip-action {
 @media only screen and (max-width: 768px) and (orientation: landscape) {
 
     div.content div.watch div.player-wrapper {
-        width: 100%;
+        width: 100vw;
+        height: 100vh;
         bottom: 0;
     }
     
+    div.content {
+        top: 0px;
+    }
+
+    div.header{
+        display:none;
+    }
+
 }
