--- a/static/css/home.css
+++ b/static/css/home.css
@@ -114,7 +114,7 @@ div.option h3.header:last-child {
 
 div.option p.description {
     margin-top: 0em;
-    color: #151515
+    color: #a7a7a7
 }
 
 div.home-room-wrapper {
@@ -132,5 +132,9 @@ img.icon {
 
     img.icon {
         filter: invert(0)
+    }
+
+    div.option p.description {
+        color: #151515
     }
 }
