--- a/static/css/components.css
+++ b/static/css/components.css
@@ -1,5 +1,5 @@
 .loading {
-    background: linear-gradient(225deg,red,#d200ff,#0063ff,#00ffc1,#0bff66,#16ff00,#f0ff00,red) !important;
+    background: linear-gradient(225deg,red,#d000ffd2,#0062ffd3,#00c3ffda,#2ab301,#00ffeabd,#ff7b00ce,red) !important;
     background-size: 1600% 1600% !important;
     
     transform: translateZ(0);
@@ -81,6 +81,10 @@ div.box:active {
 }
 
 @media screen and (prefers-color-scheme: light) {
+    .loading {
+        background: linear-gradient(225deg,red,#d200ff,#0063ff,#00ffc1,#0bff66,#16ff00,#f0ff00,red) !important
+    }
+
     div.box {
         border-radius: 10px;
         background-color: white;
