--- a/static/css/components/button.css
+++ b/static/css/components/button.css
@@ -9,7 +9,7 @@ a.button-wrapper div.button {
     padding: 10px;
 
     background-color: black;
-    box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25);
+    box-shadow: 0 0 0 1px grey;
 
     font-weight: 600;
     border-radius: 5px;
@@ -51,11 +51,11 @@ div.button p.button-content {
 
 a.button-wrapper div.button:not(.disabled):not(.loading):hover {
     background-color: #080808;
-    box-shadow: 0px 4px 10px #ffffff9a !important
+    box-shadow: 0px 0px 5px 5px #ffffff75 !important
 }
 
 a.button-wrapper div.button:not(.disabled):not(.loading):active {
-    background-color: #ececec;
+    background-color: #2c2c2c;
     box-shadow: 0px 6px 15px #00000017 !important
 }
 
@@ -88,6 +88,10 @@ p.button-content {
 }
 
 @media screen and (prefers-color-scheme: light) {
+    a.button-wrapper div.button {
+        box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25)
+    }
+
     a.button-wrapper div.button:not(.disabled):not(.loading):hover {
         background-color: #f7f7f7;
         box-shadow: 0px 4px 10px #00000017 !important
@@ -95,5 +99,10 @@ p.button-content {
 
     div.button:not(.discord):not(.disabled):not(.loading):hover p.button-content {
         color: black
+    }
+
+    a.button-wrapper div.button:not(.disabled):not(.loading):active {
+        background-color: #ececec;
+        box-shadow: 0px 6px 15px #00000017 !important
     }
 }
