--- a/static/css/room/chat.css
+++ b/static/css/room/chat.css
@@ -149,7 +149,7 @@ div.content div.watch div.player-footer, div.content div.watch div.chat {
 img.emoji {
     height: 1em;
     width: 1em;
-    margin: 0 .05em 0 .1em;
+    margin: 0.05em 0 .1em;
     vertical-align: -0.1em;
 }
 
