--- a/static/css/room/invite-hint.css
+++ b/static/css/room/invite-hint.css
@@ -21,11 +21,8 @@ div.invite-hint a.invite-link:hover {
     opacity: 1
 }
 
-/* Mobile UI adaptation */
 @media only screen and (max-width: 768px),(orientation: portrait) {
-
     div.invite-hint {
-        display:none; /* Temporary fix, needs better solution */
+        display: none; /* TODO: Find a better solution instead of hiding invite hint */
     }
-
 }
