--- a/static/css/home.css
+++ b/static/css/home.css
@@ -5,7 +5,7 @@ div.invite-wrapper {
 div.options {
     width: fit-content;
 
-    margin: auto;
+    margin: auto
 }
 
 div.options.is-horizontal {
@@ -15,7 +15,7 @@ div.options.is-horizontal {
 div.options div.option {
     width: 14em;
     height: fit-content;
-    
+
     padding: 2em;
 
     display: flex;
