--- a/static/css/invite.css
+++ b/static/css/invite.css
@@ -1,5 +1,5 @@
 div.invite-wrapper {
-    display: flex;
+    display: flex
 }
 
 img.invite-image {
@@ -10,7 +10,7 @@ img.invite-image {
 }
 
 div.invite-details {
-    margin-left: 2em;
+    margin-left: 2em
 }
 
 img.invite-member-icon {
@@ -27,11 +27,11 @@ div.invite-member-icons {
     grid-row-gap: 10px;
     margin-top: 7em;
     position: absolute;
-    width: 100px;
+    width: 100px
 }
 
 div.invite-member-icon-wrapper {
-    display: flex;
+    display: flex
 }
 
 div.portal-indicator {
@@ -43,7 +43,7 @@ div.portal-indicator {
     margin-top: 8px;
     border-radius: 10px;
 
-    z-index: -1;
+    z-index: -1
 }
 
 @media screen and (prefers-color-scheme: light) {
