--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -20,18 +20,18 @@ div.landing div.left {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
     left: 0px;
 
     background-color: black;
-    color:white
+    color: white
 }
 
 div.landing div.right {
     overflow: hidden;
 
     left: 50%;
-    
+
     pointer-events: none
 }
 
@@ -52,12 +52,10 @@ div.login div.buttons a.button-wrapper div.button {
 
 p.disclaimer {
     /* position: absolute; */
-
     color: gray;
     font-size: 14px;
 
-    margin: 0;
-    /* margin-top: 12.5px; */
+    margin: 0
 }
 
 div.right .video {
@@ -72,9 +70,9 @@ div.right .video {
 @media only screen and (max-width: 900px) {
     div.landing div.left, div.landing div.right {
         width: 100%;
-        height: 100%;
+        height: 100%
     }
-    
+
     div.landing div.right {
         display: none
     }
@@ -88,6 +86,6 @@ div.right .video {
 
     div.landing div.left {
         background-color: white;
-        color:black
+        color: black
     }
 }
