--- a/static/css/master.css
+++ b/static/css/master.css
@@ -19,11 +19,11 @@ img {
 
 a {
     color: rgb(199, 199, 199);
-    text-decoration: none;
+    text-decoration: none
 }
 
 a:hover {
-    color: rgb(133, 133, 133);
+    color: rgb(133, 133, 133)
 }
 
 div.header {
@@ -31,10 +31,10 @@ div.header {
 
     top: 0;
     left: 0;
-    
+
     border-bottom: rgba(112, 128, 144, 0.25) 1px solid;
     background-color: black;
-    
+
     padding: 16px;
 
     height: 32px;
@@ -42,7 +42,7 @@ div.header {
 
     z-index: 9997;
 
-    display: flex;
+    display: flex
 }
 
 div.header h1.title {
@@ -50,7 +50,7 @@ div.header h1.title {
     margin-left: 0.65em;
     font-size: 27px;
     font-weight: 500;
-    color: white;
+    color: white
 }
 
 div.header div.left, div.header div.right {
@@ -78,7 +78,7 @@ div.header div.gradient {
     -webkit-mask-repeat: round;
     mask-image: url('/img/logo-light.svg');
     -webkit-mask-image: url('/img/logo-light.svg');
-    
+
     opacity: 0;
 
     transition: all 0.2s
@@ -97,7 +97,7 @@ div.header img.profile-image {
     border-radius: 50%;
     width: 32px;
     height: 32px;
-    background-color: rgba(112, 128, 144, 0.25);
+    background-color: rgba(112, 128, 144, 0.25)
 }
 
 div.header div.header-menu {
@@ -113,13 +113,13 @@ div.header div.header-menu {
     box-shadow: 0 0 0px 1px rgba(112, 128, 144, 0.25);
     opacity: 0;
     transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    z-index: -1;
+    z-index: -1
 }
 
 div.header div.header-menu.visible {
     pointer-events: all;
     opacity: 1;
-    top: 60px;
+    top: 60px
 }
 
 div.header-menu.user-menu {
@@ -127,7 +127,7 @@ div.header-menu.user-menu {
 }
 
 div.header-menu.room-menu {
-    left: 16px;
+    left: 16px
 }
 
 div.header-menu div.menu-option:not(.loading) img.menu-option-icon {
@@ -151,7 +151,7 @@ div.header-menu div.menu-option.disabled {
 }
 
 div.menu-option.loading p.menu-option-content {
-    color: black;
+    color: black
 }
 
 div.header-menu a:last-child > div.menu-option {
@@ -160,7 +160,7 @@ div.header-menu a:last-child > div.menu-option {
 
 div.menu-option p.menu-option-content.menu-option-title {
     font-size: 18px;
-    font-weight: bold;
+    font-weight: bold
 }
 
 div.menu-option p.menu-option-content.menu-option-subtitle {
@@ -174,7 +174,7 @@ div.menu-option p.menu-option-content.menu-option-hint {
     font-size: 12px;
     margin-top: 5px;
     opacity: 0.65;
-    font-weight: 300;
+    font-weight: 300
 }
 
 div.menu-option.has-icon {
@@ -221,7 +221,7 @@ div.menu-cover {
 
 div.menu-cover.visible {
     pointer-events: all;
-    opacity: 1;
+    opacity: 1
 }
 
 div.content {
@@ -237,7 +237,7 @@ div.content {
 div.content.is-center {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center
 }
 
 div.content.no-header {
@@ -262,11 +262,11 @@ p.disclaimer {
     color: gray;
     font-size: 14px;
 
-    margin: 0;
+    margin: 0
 }
 
 div.has-icon h1.title {
-    margin-left: 42.5px;
+    margin-left: 42.5px
 }
 
 img.close-button, img.close-button-hover {
@@ -313,7 +313,7 @@ div.scrollable {
     transform: translateX(-50%);
     margin-bottom: 5em;
     background-color: white;
-    z-index: 2;
+    z-index: 2
 }
 
 p.pp-disclaimer {
@@ -321,7 +321,7 @@ p.pp-disclaimer {
     font-size: 14px;
 
     margin: 0;
-    margin-top: 12.5px;
+    margin-top: 12.5px
 }
 
 p.is-divider {
@@ -376,7 +376,7 @@ div.header-menu div.menu-section:not(:last-child) {
     ::selection {
         background: #e4e4e4
     }
-    
+
     ::-moz-selection {
         background: #e4e4e4
     }
@@ -431,13 +431,13 @@ div.header-menu div.menu-section:not(:last-child) {
     div.header-menu a.menu-option-wrapper:not(.disabled):hover > div.menu-option {
         background-color: #f7f7f7
     }
-    
+
     div.header-menu a.menu-option-wrapper:not(.disabled):active > div.menu-option {
         background-color: #ececec
     }
 
     div.header div.gradient {
         mask-image: url('/img/logo.svg');
-        -webkit-mask-image: url('/img/logo.svg');
+        -webkit-mask-image: url('/img/logo.svg')
     }
 }
