--- a/static/css/components/modal.css
+++ b/static/css/components/modal.css
@@ -15,12 +15,12 @@ div.modal-wrapper {
 
     z-index: 9999;
 
-    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1)
 }
 
 div.modal-wrapper.visible {
     opacity: 1;
-    pointer-events: all;
+    pointer-events: all
 }
 
 div.modal-wrapper.cover {
@@ -35,13 +35,12 @@ div.modal {
 
     padding: 1.5em;
     z-index: 9999;
-    
+
     color: white;
     background-color: black;
 
     border: rgba(112, 128, 144, 0.25) 1px solid;
     border-radius: 10px;
-
 
     transition: 0.2s all ease-in-out
 }
@@ -78,7 +77,7 @@ div.modal-wrapper.cover div.modal-cover {
         background-color: white
     }
 
-    
+
     div.modal {
         color: black;
         background-color: white
