--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -1,13 +1,3 @@
-div.center {
-    width: 60%;
-    max-width: 100%
-}
-
-div.center:not(.has-landing-video) {
-    max-width: 60%;
-    width: fit-content
-}
-
 div.landing div.left, div.landing div.right {
     position: absolute;
 
@@ -27,12 +17,26 @@ div.landing div.left {
     color: white
 }
 
+div.landing div.left:not(.has-landing-video) {
+    width: 100%
+}
+
 div.landing div.right {
     overflow: hidden;
 
     left: 50%;
 
     pointer-events: none
+}
+
+div.center {
+    width: 60%;
+    max-width: 100%
+}
+
+div.center:not(.has-landing-video) {
+    max-width: 60%;
+    width: fit-content
 }
 
 div.center img.logo {
@@ -68,7 +72,7 @@ div.right .video {
 }
 
 @media only screen and (max-width: 900px) {
-    div.landing div.left, div.landing div.right {
+    div.landing div.left {
         width: 100%;
         height: 100%
     }
@@ -79,12 +83,7 @@ div.right .video {
 }
 
 @media screen and (prefers-color-scheme: light) {
-    div.landing {
-        background-color: white;
-        color: black
-    }
-
-    div.landing div.left {
+    div.landing, div.landing div.left {
         background-color: white;
         color: black
     }
