--- a/static/css/master.css
+++ b/static/css/master.css
@@ -262,7 +262,8 @@ p.disclaimer {
     color: gray;
     font-size: 14px;
 
-    margin: 0
+    margin: 0;
+    margin-top: 0.5em
 }
 
 div.has-icon h1.title {
