fix player-dev color

--- a/static/css/room/player.css
+++ b/static/css/room/player.css
@@ -64,6 +64,7 @@ video.static-placeholder {
 
 p.player-dev {
     position: absolute;
+    color: white;
     background-color: rgba(0,0,0,0.72157);
 
     top: 0px;
