--- a/static/css/room/player.css
+++ b/static/css/room/player.css
@@ -80,7 +80,7 @@ p.player-dev {
     pointer-events: none
 }
 
-canvas.player-stream {
+video.player-stream {
     position: fixed;
 
     outline: none;
