--- a/static/css/components.css
+++ b/static/css/components.css
@@ -1,5 +1,5 @@
 .loading {
-    background: linear-gradient(225deg,red,#d000ffd2,#0062ffd3,#00c3ffda,#2ab301,#00ffeabd,#ff7b00ce,red) !important;
+    background: linear-gradient(225deg,red,#d200ff,#0063ff,#00ffc1,#0bff66,#16ff00,#f0ff00,red) !important;
     background-size: 1600% 1600% !important;
 
     transform: translateZ(0);
@@ -65,26 +65,20 @@ button.button.disabled {
 div.box {
     border-radius: 10px;
     background-color: black;
-    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.767);
+    box-shadow: 0 0 0 1px rgba(112, 128, 144, 0.25);
 
     transition: all 0.1s ease-in-out
 }
 
 div.box:hover {
-    /* background-color: #fffcfc; */
-    box-shadow: 0px 0px 5px 5px #ffffff75 !important
+    box-shadow: 0 0 10px rgba(112, 128, 144, 0.25) !important
 }
 
 div.box:active {
-    /* background-color: #f9f8f8; */
-    box-shadow: 0px 0px 5px 5px #ffffff75 !important
+    box-shadow: 0 0 15px rgba(112, 128, 144, 0.25) !important
 }
 
 @media screen and (prefers-color-scheme: light) {
-    .loading {
-        background: linear-gradient(225deg,red,#d200ff,#0063ff,#00ffc1,#0bff66,#16ff00,#f0ff00,red) !important
-    }
-
     div.box {
         border-radius: 10px;
         background-color: white;
