--- a/static/css/master.css
+++ b/static/css/master.css
@@ -181,7 +181,8 @@ div.menu-option.has-icon {
 }
 
 div.menu-option.has-icon p.menu-option-content {
-    margin-left: 8px
+    margin-left: 8px;
+    display: flex
 }
 
 div.menu-option .menu-option-content {
