Misc changes, bug fixing
* Code style changes
* Fixing a little chat bug
* Fix a misc bug

This has some things ToDo still.

--- a/static/css/room/player.css
+++ b/static/css/room/player.css
@@ -81,7 +81,7 @@ p.player-dev {
     pointer-events: none
 }
 
-video.player-stream {
+canvas.player-stream, video.player-stream {
     position: fixed;
 
     outline: none;
