--- a/components/Loading/index.html
+++ b/components/Loading/index.html
@@ -2,21 +2,17 @@
     <div class="gradient is-loading" id="loading-logo"></div>
 </div>
 
-<script type="text/javascript">
-    window.addEventListener('error', function () {
-        var e = document.getElementById('loading-logo');
-        if (e)
-            e.className = 'gradient is-error'
-    });
-</script>
-
 <style type="text/css">
     div.gradient {
-        width: 150px;
-        height: 150px;
+        width: 100%;
+        height: 100%;
 
-        mask-repeat: round;
-        -webkit-mask-repeat: round;
+        -mask-size: 7.5%;
+        -webkit-mask-size: 7.5%;
+        mask-repeat: no-repeat;
+        -webkit-mask-repeat: no-repeat;
+        mask-position: center;
+        -webkit-mask-position: center;
         mask-image: url('/img/logo-light.svg');
         -webkit-mask-image: url('/img/logo-light.svg');
 
