--- a/components/Loading/index.html
+++ b/components/Loading/index.html
@@ -3,6 +3,11 @@
 </div>
 
 <style type="text/css">
+    div.content {
+        top: 0;
+        height: 100%
+    }
+
     div.gradient {
         width: 100%;
         height: 100%;
